objects/wkdw__OnboardingTask__c.object
<CustomObject>
    <description>Custom object that represents a task that an HR agent assigns to a new employee through a transition template</description>
    <fields>
        <fullName>wkdw__Description__c</fullName>
        <description>A description of the onboarding task.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__DisplayDescription__c</fullName>
        <description>A description of the onboarding task.</description>
        <inlineHelpText>The task description that employees see in the onboarding checklist. If left blank, the Description is used.</inlineHelpText>
        <label>Display Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__DisplayName__c</fullName>
        <description>The task name that employees see in the transition checklist. If left blank, the Task Name is used.</description>
        <inlineHelpText>The task name that employees see in the onboarding checklist. If left blank, the Task Name is used.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__FlowAPIName__c</fullName>
        <description>API name of the flow associated with this task. A flow is optional in order to complete an assigned Task.</description>
        <label>Flow API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__Priority__c</fullName>
        <description>Do not use this field</description>
        <label>Priority of Onboarding Task DEPRECATED</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkdw__StartDayOffset__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not use this field</description>
        <label>Start Day Offset DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transition Plan Task</label>
    <listViews>
        <fullName>wkdw__All</fullName>
        <columns>NAME</columns>
        <columns>wkdw__FlowAPIName__c</columns>
        <columns>wkdw__DisplayName__c</columns>
        <columns>wkdw__Priority__c</columns>
        <columns>wkdw__StartDayOffset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transition Plan Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>